fixed whitespace deletion in dictionary entries

--- a/style/dict_entry_style.css
+++ b/style/dict_entry_style.css
@@ -35,6 +35,7 @@
     margin-top: calc(var(--hugehuge) - 1.1 * var(--mini));
     display: flex;
     flex-direction: row;
+    white-space: pre;
 }
 
 .def {
@@ -42,6 +43,7 @@
     flex-direction: column;
     font-size: var(--small);
     margin-bottom: var(--minimini);
+    white-space: pre;
 }
 
 .notes {
